--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.lopes.danielebonilha.MainActivity"
+    tools:context="com.dbonilha.movieapp.MainActivity"
     android:id="@+id/coordinatorLayout"
     android:focusable="true"
     android:focusableInTouchMode="true">
