--- a/app/src/main/res/layout/activity_review_description.xml
+++ b/app/src/main/res/layout/activity_review_description.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.lopes.danielebonilha.ReviewDescription"
+    tools:context="com.dbonilha.movieapp.ReviewDescription"
     android:id="@+id/reviewLayout">
 
     <android.support.design.widget.AppBarLayout
