--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="br.com.lopes.danielebonilha.MainActivity"
+    tools:context="com.dbonilha.movieapp.MainActivity"
     android:orientation="vertical">
 
 
