--- a/app/src/main/res/layout/content_review_description.xml
+++ b/app/src/main/res/layout/content_review_description.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.lopes.danielebonilha.ReviewDescription"
+    tools:context="com.dbonilha.movieapp.ReviewDescription"
     tools:showIn="@layout/activity_review_description"
     android:orientation="vertical"
     android:nestedScrollingEnabled="false">
@@ -38,17 +38,40 @@
                  android:textSize="@dimen/abc_text_size_medium_material"
                  android:nestedScrollingEnabled="false" />
 
-            <RatingBar
-                android:layout_gravity="bottom|right"
-                android:layout_width="wrap_content"
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/reviewRatingBar"
-                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
-                android:theme="@style/RatingBar"
-                android:clickable="true"
-                android:numStars="@integer/num_stars"
-                android:isIndicator="false"
-                android:contentDescription="@string/rating_description" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/reviewRatingText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:autoText="false"
+                    android:paddingTop="10dp"
+                    android:text="@string/review_rating"
+                    android:textAlignment="inherit"
+                    android:textIsSelectable="false"
+                    android:textStyle="italic" />
+
+                <RatingBar
+                    android:id="@+id/reviewRatingBar"
+                    style="@android:style/Widget.Material.Light.RatingBar.Indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom|right"
+                    android:layout_weight="0.04"
+                    android:clickable="true"
+                    android:contentDescription="@string/rating_description"
+                    android:isIndicator="false"
+                    android:numStars="@integer/num_stars"
+                    android:theme="@style/RatingBar" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
