--- a/app/src/main/res/layout/content_review_description.xml
+++ b/app/src/main/res/layout/content_review_description.xml
@@ -42,6 +42,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
+            <Button
+                android:id="@+id/fullRevBtn"
+                style="@android:style/Theme.Translucent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="@string/full_review_btn"
+                android:textColor="@color/com_facebook_button_login_background_color" />
+
+            <ProgressBar
+                android:id="@+id/progressBarWeb"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <WebView
+                android:id="@+id/fullReviewPage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
